--- a/src/app/dashboard-module/domain-module/common/css/preview.component.css
+++ b/src/app/dashboard-module/domain-module/common/css/preview.component.css
@@ -118,6 +118,7 @@ mat-icon {
     grid-area: header;
     display: inline-flex;
     width: 100% !important;
+    font-size: inherit;
   }
 
   .grid-container {
